# gimp

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yaml
docs/human/: commands.md
docs/llm/: bridge-protocol.md  command-spec.md  error-codes.md  quickstart.md  response-schema.json
src/harness_gimp/: __main__.py
src/harness_gimp/bridge/: __init__.py  client.py  operations.py  protocol.py  server.py
src/harness_gimp/cli/: main.py
src/harness_gimp/core/: gimp.py
src/harnessgg_gimp/: __init__.py
tests/: test_cli_bridge_url.py  test_operations.py
